--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -1,10 +1,11 @@
+
 .footer {
     display: flex;
     justify-content: space-between; /* Space between content */
     align-items: center;
     padding: 0 2rem; /* Add padding for spacing */
-    height: 5vh;
-    background-color: #333;
+    height: 3.8vh;
+    background-color: #292929;
     margin: 0;
   }
   
@@ -14,18 +15,18 @@
   }
   
   .social-icons a {
-    color: yellow; /* Change color to yellow */
-    font-size: 1.2rem; /* Make icons smaller */
+    color: #d3be6b; /* Change color to yellow */
+    font-size: 1.1rem; /* Make icons smaller */
     transition: color 0.3s ease;
   }
   
   .social-icons a:hover {
-    color: #FFD700; /* Change hover color to a different shade of yellow if needed */
+    color: white; /* Change hover color to a different shade of yellow if needed */
   }
   
   .company-name {
-    color: white;
-    font-size: 1.2rem;
+    color: #d3be6b;
+    font-size: 0.9rem;
     text-align: right; /* Ensure text aligns right */
   }
   
@@ -38,7 +39,7 @@
     }
   
     .company-name {
-      margin-top: 1rem; /* Add spacing between icons and name */
+      margin-top: 0.4rem; /* Add spacing between icons and name */
     }
   
     .social-icons {
@@ -46,7 +47,7 @@
     }
   
     .social-icons a {
-      font-size: 1rem; /* Make icons even smaller on small screens */
+      font-size: 0.9rem; /* Make icons even smaller on small screens */
     }
   }
   
